alignment with APA 7; more figure improvements

--- a/01-science-of-psych.Rmd
+++ b/01-science-of-psych.Rmd
@@ -2,7 +2,7 @@
 
 Many people believe that women tend to talk more than men—with some even suggesting that this difference has a biological basis. One widely cited estimate is that women speak 20,000 words per day on average and men speak only 7,000. Is it true? A group of psychologists led by Matias Mehl decided to find out. They checked to see if anyone had actually tried to count the daily number of words spoken by women and men. No one had. So these researchers conducted a study in which female and male college students (369 in all) wore audio recorders while they went about their lives. The result? The women spoke an average of 16,215 words per day and the men spoke an average of 15,669—an extremely small difference that could easily be explained by chance. In an article in the journal Science, these researchers summed up their findings as follows: “We therefore conclude, on the basis of available empirical evidence, that the widespread and highly publicized stereotype about female talkativeness is unfounded” [@mehl2007women].
 
-```{r mehl, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Although many people believe that women are more talkative than men, scientific research on college students suggests that there is no overall difference. *Photo by Eliott Reyna on Unsplash.*'}
+```{r mehl, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Although many people believe that women are more talkative than men, scientific research on college students suggests that there is no overall difference. *Photo by Eliott Reyna on Unsplash.*', fig.alt = 'Photo of five young adults walking down a sidewalk, laughing and talking.'}
 knitr::include_graphics("images/ch1/mehl.jpeg")
 ```
 
@@ -84,7 +84,7 @@ An excellent source for information on pseudoscience is The Skeptic’s Dictiona
 
 Figure \@ref(fig:scientificmethod) presents a more specific model of scientific research in psychology. The researcher (who more often than not is really a small group of researchers) formulates a research question, conducts a study designed to answer the question, analyzes the resulting data, draws conclusions about the answer to the question, and publishes the results so that they become part of the research literature. Because the research literature is one of the primary sources of new research questions, this process can be thought of as a cycle. New research leads to new questions, which lead to new research, and so on. Figure \@ref(fig:scientificmethod) also indicates that research questions can originate outside of this cycle either with informal observations or with practical problems that need to be solved. But even in these cases, the researcher would start by checking the research literature to see if the question had already been answered and to refine it based on what previous research had already found.
 
-```{r scientificmethod, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='A simple model of scientific research in psychology'}
+```{r scientificmethod, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='A simple model of scientific research in psychology.', fig.alt = 'A circular flow chart with arrows going from Research Literature to Research Questions, then to Empirical Study, then to Data Analysis, then to Conclusions, and then back to Research Literature. An additional arrow points from Research Questions to Research Literature. From outside the circle an arrow points to Research Questions from Informal Observations/ Practical Problems.'}
 knitr::include_graphics("images/ch1/scientificmethod.png")
 ```
 
@@ -92,7 +92,7 @@ The research by Mehl and his colleagues is described nicely by this model. Their
 
 As another example, consider that as cell phones became more widespread during the 1990s, people began to wonder whether, and to what extent, cell phone use had a negative effect on driving. Many psychologists decided to tackle this question scientifically [@collet2010phoning]. It was clear from previously published research that engaging in a simple verbal task impairs performance on a perceptual or motor task carried out at the same time, but no one had studied the effect specifically of cell phone use on driving. Under carefully controlled conditions, these researchers compared people’s driving performance while using a cell phone with their performance while not using a cell phone, both in the lab and on the road. They found that people’s ability to detect road hazards, reaction time, and control of the vehicle were all impaired by cell phone use. Each new study was published and became part of the growing research literature on this topic.
 
-```{r cell, echo = FALSE, out.width='50%', fig.align = 'center', fig.cap='Scientific research has confirmed that cell phone use impairs a variety of driving behaviors. *Photo by Alexandre Boucher on Unsplash.*'}
+```{r cell, echo = FALSE, out.width='50%', fig.align = 'center', fig.cap='Scientific research has confirmed that cell phone use impairs a variety of driving behaviors. *Photo by Alexandre Boucher on Unsplash.*', fig.alt = 'A photograph of a man holding a cell phone to his ear while driving.'}
 knitr::include_graphics("images/ch1/cell.jpeg")
 ```
 
@@ -185,7 +185,7 @@ Again, psychology is the scientific study of behavior and mental processes. But 
 
 The main point is that psychological disorders and other behavioral problems are part of the natural world. This means that questions about their nature, causes, and consequences are empirically testable and therefore subject to scientific study. As with other questions about human behavior, we cannot rely on our intuition or common sense for detailed and accurate answers. Consider, for example, that dozens of popular books and thousands of websites claim that adult children of alcoholics have a distinct personality profile, including low self-esteem, feelings of powerlessness, and difficulties with intimacy. Although this sounds plausible, scientific research has demonstrated that adult children of alcoholics are no more likely to have these problems than anybody else [@lilienfeld2010five]. Similarly, questions about whether a particular psychotherapy works are empirically testable questions that can be answered by scientific research. If a new psychotherapy is an effective treatment for depression, then systematic observation should reveal that depressed people who receive this psychotherapy improve more than a similar group of depressed people who do not receive this psychotherapy (or who receive some alternative treatment). Treatments that have been shown to work in this way are called [empirically supported treatments](#empirically-supported-treatment).
 
-```{r therapy, echo = FALSE, out.width='50%', fig.align = 'center', fig.cap='The effectiveness of various forms of psychotherapy—for example, cognitive behavioral therapy for depression—can be determined by scientific research. *Photo by Priscilla Du Preez on Unsplash.*'}
+```{r therapy, echo = FALSE, out.width='50%', fig.align = 'center', fig.cap='The effectiveness of various forms of psychotherapy—for example, cognitive behavioral therapy for depression—can be determined by scientific research. *Photo by Priscilla Du Preez on Unsplash.*', fig.alt = 'Photo of two people sitting near each other with their hands folded in their laps. Their faces are not visible.'}
 knitr::include_graphics("images/ch1/therapy.jpeg")
 ```
 
