--- a/07-nonexperiments.Rmd
+++ b/07-nonexperiments.Rmd
@@ -47,7 +47,7 @@ The final way in which research can be nonexperimental is that it can be qualita
 
 Recall that internal validity is the extent to which the design of a study supports the conclusion that changes in the independent variable caused any observed differences in the dependent variable. Figure \@ref(fig:validity) shows how experimental, quasi-experimental, and correlational research vary in terms of internal validity. Experimental research tends to be highest because it addresses the directionality and third-variable problems through manipulation and the control of extraneous variables through random assignment. If the average score on the dependent variable in an experiment differs across conditions, it is quite likely that the independent variable is responsible for that difference. Correlational research is lowest because it fails to address either problem. If the average score on the dependent variable differs across levels of the independent variable, it could be that the independent variable is responsible, but there are other interpretations. In some situations, the direction of causality could be reversed. In others, there could be a third variable that is causing differences in both the independent and dependent variables. Quasi-experimental research is in the middle because the manipulation of the independent variable addresses some problems, but the lack of random assignment and experimental control fails to address others. Imagine, for example, that a researcher finds two similar schools, starts an antibullying program in one, and then finds fewer bullying incidents in that “treatment school” than in the “control school.” There is no directionality problem because clearly the number of bullying incidents did not determine which school got the program. However, the lack of random assignment of children to schools could still mean that students in the treatment school differed from students in the control school in some other way that could explain the difference in bullying.
 
-```{r validity, echo = FALSE, out.width='90%', fig.align = 'center', fig.cap='Experiments are generally high in internal validity, quasi-experiments lower, and correlational studies lower still.'}
+```{r validity, echo = FALSE, out.width='90%', fig.align = 'center', fig.cap='Experiments are generally high in internal validity, quasi-experiments lower, and correlational studies lower still.', fig.alt = 'Three overlapping rectangles. From left to right, they are labeled Correlational, Quasi-Experimental, and Experimental. The rectangles are over a continuum from lower internal validity on the left to higher internal validity on the right.'}
 knitr::include_graphics("images/ch7/validity.png")
 ```
 
@@ -111,7 +111,7 @@ Precise specification of the sampling process in this way makes data collection 
 
 The second issue is measurement. What specific behaviors will be observed? In Levine and Norenzayan’s study, measurement was relatively straightforward. They simply measured out a 60-foot distance along a city sidewalk and then used a stopwatch to time participants as they walked over that distance. Often, however, the behaviors of interest are not so obvious or objective. For example, researchers Robert Kraut and Robert Johnston wanted to study bowlers’ reactions to their shots, both when they were facing the pins and then when they turned toward their companions [@kraut1979social]. But what “reactions” should they observe? Based on previous research and their own pilot testing, Kraut and Johnston created a list of reactions that included “closed smile,” “open smile,” “laugh,” “neutral face,” “look down,” “look away,” and “face cover” (covering one’s face with one’s hands). The observers committed this list to memory and then practiced by coding the reactions of bowlers who had been videotaped. During the actual study, the observers spoke into an audio recorder, describing the reactions they observed. Among the most interesting results of this study was that bowlers rarely smiled while they still faced the pins. They were much more likely to smile after they turned toward their companions, suggesting that smiling is not purely an expression of happiness but also a form of social communication.
 
-```{r bowl, echo = FALSE, out.width='50%', fig.align = 'center', fig.cap='Naturalistic observation has revealed that bowlers tend to smile when they turn away from the pins and toward their companions, suggesting that smiling is not purely an expression of happiness but also a form of social communication. *Photo by José Juan Rosa on Unsplash.*'}
+```{r bowl, echo = FALSE, out.width='50%', fig.align = 'center', fig.cap='Naturalistic observation has revealed that bowlers tend to smile when they turn away from the pins and toward their companions, suggesting that smiling is not purely an expression of happiness but also a form of social communication. *Photo by José Juan Rosa on Unsplash.*', fig.alt = 'A person with short hair in a striped yellow shirt looks down the lane of a bowling alley, presumably having just bowled.'}
 knitr::include_graphics("images/ch7/bowl.jpeg")
 ```
 
@@ -180,7 +180,7 @@ Early studies on the effectiveness of psychotherapy tended to use pretest-postte
 
 Fortunately, many other researchers took up Eysenck’s challenge, and by 1980 hundreds of experiments had been conducted in which participants were randomly assigned to treatment and control conditions, and the results were summarized in a classic book by Mary Lee Smith, Gene Glass, and Thomas Miller [@smith1980benefits]. They found that overall psychotherapy was quite effective, with about 80% of treatment participants improving more than the average control participant. Subsequent research has focused more on the conditions under which different types of psychotherapy are more or less effective.
 
-```{r eysenck, echo = FALSE, out.width='35%', fig.align = 'center', fig.cap='In a classic 1952 article, researcher Hans Eysenck pointed out the shortcomings of the simple pretest-posttest design for evaluating the effectiveness of psychotherapy. *Source: Sirswindon on Wikimedia Commons.*'}
+```{r eysenck, echo = FALSE, out.width='35%', fig.align = 'center', fig.cap='In a classic 1952 article, researcher Hans Eysenck pointed out the shortcomings of the simple pretest-posttest design for evaluating the effectiveness of psychotherapy. *Source: Sirswindon on Wikimedia Commons.*', fig.alt = "A photograph of Hans Eysenck wearing brown square glasses, a tan blazer, a brown shirt, and a brown tie."}
 knitr::include_graphics("images/ch7/eysenck.jpg")
 ```
 :::
@@ -191,7 +191,7 @@ A variant of the pretest-posttest design is the [interrupted time-series design]
 
 Figure \@ref(fig:timeseries) shows data from a hypothetical interrupted time-series study. The dependent variable is the number of student absences per week in a research methods course. The treatment is that the instructor begins publicly taking attendance each day so that students know that the instructor is aware of who is present and who is absent. The top panel of Figure \@ref(fig:timeseries) shows how the data might look if this treatment worked. There is a consistently high number of absences before the treatment, and there is an immediate and sustained drop in absences after the treatment. The bottom panel of Figure \@ref(fig:timeseries) shows how the data might look if this treatment did not work. On average, the number of absences after the treatment is about the same as the number before. This figure also illustrates an advantage of the interrupted time-series design over a simpler pretest-posttest design. If there had been only one measurement of absences before the treatment at Week 7 and one afterward at Week 8, then it would have looked as though the treatment were responsible for the reduction. The multiple measurements both before and after the treatment suggest that the reduction between Weeks 7 and 8 is nothing more than normal week-to-week variation.
 
-```{r timeseries, echo = FALSE, out.width='60%', fig.align = 'center',  fig.show = 'hold', fig.cap='Hypothetical interrupted time-series design. The top panel shows data that suggest that the treatment caused a reduction in absences. The bottom panel shows data that suggest that it did not.'}
+```{r timeseries, echo = FALSE, out.width='60%', fig.align = 'center',  fig.show = 'hold', fig.cap='Hypothetical interrupted time-series design. The top panel shows data that suggest that the treatment caused a reduction in absences. The bottom panel shows data that suggest that it did not.', fig.alt = 'Two line graphs. The x-axes on both are labeled Week and range from 0 to 14. The y-axes on both are labeled Absences and range from 0 to 8. Between weeks 7 and 8 a vertical dotted line indicates when a treatment was introduced. Both graphs show generally high levels of absences from weeks 1 through 7 (before the treatment) and only 2 absences in week 8 (the first observation after the treatment). The top graph shows the absence level staying low from weeks 9 to 14. The bottom graph shows the absence level for weeks 9 to 15 bouncing around at the same high levels as before the treatment.'}
 y <- c(2,6,8,4,8,5,8,2,0,1,3,2,0,1)
 x <- c(1,2,3,4,5,6,7,8,9,10,11,12,13,14)
 y2 <- c(2,6,8,4,8,5,8,2,7,6,8,6,4,7)
