--- a/book.bib
+++ b/book.bib
@@ -1326,3 +1326,13 @@ year = {2008}
   year={2012},
   publisher={Psychology Press}
 }
+
+@article{pilegard2016improving,
+  title={Improving academic learning from computer-based narrative games},
+  author={Pilegard, Celeste and Mayer, Richard E},
+  journal={Contemporary Educational Psychology},
+  volume={44},
+  pages={12--20},
+  year={2016},
+  publisher={Elsevier}
+}
