--- a/08-complex-designs.Rmd
+++ b/08-complex-designs.Rmd
@@ -151,6 +151,8 @@ The effect of one independent variable can depend on the level of the other in d
 
 ```{r barinteractions, echo = FALSE, out.width='51%', fig.align = 'center', fig.show = 'hold', fig.cap='Bar graphs showing three types of interactions. In the top panel, one independent variable has an effect at one level of the second independent variable but not at the other. In the middle panel, one independent variable has a stronger effect at one level of the second independent variable than at the other. In the bottom panel, one independent variable has the opposite effect at one level of the second independent variable than at the other.'}
 
+par(mar = c(4, 4, 0.1, 0.1))  
+
 # Create barplot1 data
 bar1 <- data.frame(x1 = c(25,50,25,25),
                    grp = rep(c("Day","Night"),
@@ -217,32 +219,33 @@ grid(nx = NULL, ny = NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
 
 ```{r lineinteractions, echo = FALSE, out.width='51%', fig.align = 'center', fig.show = 'hold', fig.cap='Line graphs showing three types of interactions. In the top panel, one independent variable has an effect at one level of the second independent variable but not at the other. In the middle panel, one independent variable has a stronger effect at one level of the second independent variable than at the other. In the bottom panel, one independent variable has the opposite effect at one level of the second independent variable than at the other.'}
 
+par(mar = c(4, 4, 0.1, 0.1))  
 
 # Line plot 1
 x1 <- c(1,2,3,4,5)
 y11 <- c(15,16,14,16,15)
 y12 <- c(15,18,19,23,25)
-plot(x1, y11, type = "b", frame = FALSE, pch = 19, col = "#BC5C15", 
+plot(x1, y11, type = "b", frame = FALSE, pch = 19, lwd = 2, col = "#BC5C15", 
      xlab = NULL, ylab = NULL, xaxt='n', yaxt='n', ann=FALSE, ylim = c(3,30))
-lines(x1, y12, pch = 15, col = "#429780", type = "b", lty = 2)
+lines(x1, y12, pch = 15, col = "#429780", type = "b", lty = 2, lwd = 2)
 grid(nx = NULL, ny = NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
 
 # Line plot 2
 x2 <- c(1,2,3,4,5)
 y21 <- c(11,13,15,17,18)
 y22 <- c(11,15,18,23,27)
-plot(x2, y21, type = "b", frame = FALSE, pch = 19, col = "#BC5C15", 
+plot(x2, y21, type = "b", frame = FALSE, pch = 19, lwd = 2, col = "#BC5C15", 
      xlab = NULL, ylab = NULL, xaxt='n', yaxt='n', ann=FALSE, ylim = c(3,30))
-lines(x2, y22, pch = 15, col = "#429780", type = "b", lty = 2)
+lines(x2, y22, pch = 15, col = "#429780", type = "b", lty = 2, lwd = 2)
 grid(nx = NULL, ny = NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
 
 # Line plot 3
 x3 <- c(1,2,3,4,5)
 y31 <- c(15,19,20,24,25)
 y32 <- c(25,24,20,19,15)
-plot(x3, y31, type = "b", frame = FALSE, pch = 19, col = "#BC5C15", 
+plot(x3, y31, type = "b", frame = FALSE, pch = 19, lwd = 2, col = "#BC5C15", 
      xlab = NULL, ylab = NULL, xaxt='n', yaxt='n', ann=FALSE, ylim = c(3,30))
-lines(x3, y32, pch = 15, col = "#429780", type = "b", lty = 2)
+lines(x3, y32, pch = 15, col = "#429780", type = "b", lty = 2, lwd = 2)
 grid(nx = NULL, ny = NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
 ```
 
