--- a/12-descriptives.Rmd
+++ b/12-descriptives.Rmd
@@ -308,7 +308,7 @@ grid(nx = NULL, ny = NULL,
 As we saw earlier in the book, the strength of a correlation between quantitative variables is typically measured using a statistic called Pearson’s *r*. As Figure \@ref(fig:pearson) shows, its possible values range from −1.00, through zero, to +1.00. A value of 0 means there is no relationship between the two variables. In addition to his guidelines for interpreting Cohen’s *d*, Cohen offered guidelines for interpreting Pearson’s *r* in psychological research (see Table \@ref(tab:guidelines)). Values near ±.10 are considered small, values near ± .30 are considered medium, and values near ±.50 are considered large. Notice that the sign of Pearson’s *r* is unrelated to its strength. Pearson’s *r* values of +.30 and −.30, for example, are equally strong; it is just that one represents a moderate positive relationship and the other a moderate negative relationship. Like Cohen’s *d*, Pearson’s *r* is also referred to as a measure of “effect size” even though the relationship may not be a causal one.
 
 ```{r pearson, echo = FALSE, out.width='80%', fig.align = 'center', fig.cap='Pearson’s *r* ranges from −1.00 (representing the strongest possible negative relationship), through 0 (representing no relationship), to +1.00 (representing the strongest possible positive relationship).'}
-knitr::include_graphics("images/ch12/pearson.jpeg")
+knitr::include_graphics("images/ch12/pearson.png")
 ```
 
 The computations for Pearson’s *r* are more complicated than those for Cohen’s *d*. Although you may never have to do them by hand, it is still instructive to see how. Computationally, Pearson’s *r* is the “mean cross-product of *z* scores.” To compute it, one starts by transforming all the scores to *z* scores. For the *X* variable, subtract the mean of *X* from each score and divide each difference by the standard deviation of *X*. For the *Y* variable, subtract the mean of *Y* from each score and divide each difference by the standard deviation of Y. Then, for each individual, multiply the two *z* scores together to form a cross-product. Finally, take the mean of the cross-products. The formula looks like this:
@@ -425,7 +425,7 @@ Notice that when presented in the narrative, the terms *mean* and *standard devi
 
 ### Presenting Descriptive Statistics in Graphs {-}
 
-When you have a large number of results to report, you can often do it more clearly and efficiently with a graph. When you prepare graphs for an APA-style research report, there are some general guidelines that you should keep in mind. First, the graph should always add important information rather than repeat information that already appears in the text or in a table. (If a graph presents information more clearly or efficiently, then you should keep the graph and eliminate the text or table.) Second, graphs should be as simple as possible. For example, the *Publication Manual* discourages the use of color unless it is absolutely necessary (although color can still be an effective element in posters, slide show presentations, or textbooks.) Third, graphs should be interpretable on their own. A reader should be able to understand the basic result based only on the graph and its caption and should not have to refer to the text for an explanation.
+When you have a large number of results to report, you can often do it more clearly and efficiently with a graph. When you prepare graphs for an APA-style research report, there are some general guidelines that you should keep in mind. First, the graph should always add important information rather than repeat information that already appears in the text or in a table. (If a graph presents information more clearly or efficiently, then you should keep the graph and eliminate the text or table.) Second, graphs should be as simple as possible. For example, the *Publication Manual* discourages the use of color in figures for print publication unless absolutely necessary (although color can still be an effective element in posters, slide show presentations, or textbooks.) Third, graphs should be interpretable on their own. A reader should be able to understand the basic result based only on the graph and its caption and should not have to refer to the text for an explanation.
 
 There are also several more technical guidelines for graphs that include the following:
 
@@ -442,22 +442,21 @@ There are also several more technical guidelines for graphs that include the fol
 
 - Captions
     + Captions should briefly describe the figure, explain any abbreviations, and include the units of measurement if they do not appear in the axis labels.
-    +  Captions in an APA manuscript should be typed on a separate page that appears at the end of the manuscript. See "Presenting Your Research" for more information.
 
 #### Bar Graphs {-}
 
-As we have seen throughout this book, [bar graphs](#bar-graph) are generally used to present and compare the mean scores for two or more groups or conditions. The bar graph in Figure 12.12 "Sample APA-Style Bar Graph, With Error Bars Representing the Standard Errors, Based on Research by Ollendick and Colleagues" is an APA-style version of Figure \@ref(fig:apabar). Notice that it conforms to all the guidelines listed. A new element in Figure \@ref(fig:apabar) is the smaller vertical bars that extend both upward and downward from the top of each main bar. These are [error bars], and they represent the variability in each group or condition. Although they sometimes extend one standard deviation in each direction, they are more likely to extend one standard error in each direction (as in Figure \@ref(fig:apabar)). The [standard error] is the standard deviation of the group divided by the square root of the sample size of the group. The standard error is used because, in general, a difference between group means that is greater than two standard errors is statistically significant. Thus one can “see” whether a difference is statistically significant based on a bar graph with error bars.
+As we have seen throughout this book, [bar graphs](#bar-graph) are generally used to present and compare the mean scores for two or more groups or conditions. The bar graph in Figure \@ref(fig:apabar) is an APA-style version of Figure \@ref(fig:phobia). Notice that it conforms to all the guidelines listed. A new element in Figure \@ref(fig:apabar) is the smaller vertical bars that extend both upward and downward from the top of each main bar. These are [error bars], and they represent the variability in each group or condition. Although they sometimes extend one standard deviation in each direction, they are more likely to extend one standard error in each direction (as in Figure \@ref(fig:apabar)). The [standard error] is the standard deviation of the group divided by the square root of the sample size of the group. The standard error is used because, in general, a difference between the means of two group that is greater than two standard errors is statistically significant. Thus one can “see” whether a difference is statistically significant based on a bar graph with standard error bars. It is also common for error bars to represent the 95% confidence interval of the man. These error bars are interpreted differently: if there is any overlap between error bars that represent the 95% confidence interval when comparing a plot of two means, the difference is *not* statistically significant.
 
-```{r apabar, echo = FALSE, out.width='80%', fig.align = 'center', fig.cap='Sample APA-style bar graph, with error bars representing the standard errors, based on research by Ollendick and colleagues.'}
-knitr::include_graphics("images/ch12/apabar.jpeg")
+```{r apabar, echo = FALSE, out.width='60%', fig.align = 'center', fig.cap='Sample APA-style bar graph, with error bars representing the standard errors, based on research by Ollendick and colleagues.'}
+knitr::include_graphics("images/ch12/apabar.png")
 ```
 
 #### Line Graphs {-}
 
 [Line graphs](#line-graph) are used to present correlations between quantitative variables when the independent variable has, or is organized into, a relatively small number of distinct levels. Each point in a line graph represents the mean score on the dependent variable for participants at one level of the independent variable. Figure \@ref(fig:apaline) is an APA-style version of the results of Carlson and Conard. Notice that it includes error bars representing the standard error and conforms to all the stated guidelines.
 
-```{r apaline, echo = FALSE, out.width='80%', fig.align = 'center', fig.cap='Sample APA-style line graph based on research by Carlson and Conard.'}
-knitr::include_graphics("images/ch12/apaline.jpeg")
+```{r apaline, echo = FALSE, out.width='60%', fig.align = 'center', fig.cap='Sample APA-style line graph based on research by Carlson and Conard.'}
+knitr::include_graphics("images/ch12/apaline.png")
 ```
 
 In most cases, the information in a line graph could just as easily be presented in a bar graph. In Figure \@ref(fig:apabar), for example, one could replace each point with a bar that reaches up to the same level and leave the error bars right where they are. This emphasizes the fundamental similarity of the two types of statistical relationship. Both are differences in the average score on one variable across levels of another. The convention followed by most researchers, however, is to use a bar graph when the variable plotted on the x-axis is categorical and a line graph when it is quantitative.
@@ -466,9 +465,21 @@ In most cases, the information in a line graph could just as easily be presented
 
 [Scatterplots](#scatterplot) are used to present relationships between quantitative variables when the variable on the x-axis (typically the independent variable) has a large number of levels. Each point in a scatterplot represents an individual rather than the mean for a group of individuals, and there are no lines connecting the points. The graph in Figure \@ref(fig:apabar) is an APA-style version of Figure \@ref(fig:scatter), which illustrates a few additional points. First, when the variables on the x-axis and y-axis are conceptually similar and measured on the same scale—as here, where they are measures of the same variable on two different occasions—this can be emphasized by making the axes the same length. Second, when two or more individuals fall at exactly the same point on the graph, one way this can be indicated is by offsetting the points slightly along the x-axis. Other ways are by displaying the number of individuals in parentheses next to the point or by making the point larger or darker in proportion to the number of individuals. Finally, the straight line that best fits the points in the scatterplot, which is called the regression line, can also be included.
 
-```{r apascatter, echo = FALSE, out.width='50%', fig.align = 'center', fig.cap='Sample APA-style scatterplot.'}
-knitr::include_graphics("images/ch12/apascatter.jpeg")
+```{r apascatter, echo = FALSE, out.width='55%', fig.align = 'center', fig.cap='Sample APA-style scatterplot.'}
+knitr::include_graphics("images/ch12/apascatter.png")
 ```
+
+:::fyi
+##### Jitter plots {-}
+
+Developments in data visualization software have led to new options for displaying results. One data visualization method that has increased in popularity is the **jitter plot**. Like scatterplots, jitter plots show individual data points. The data visualization software that generates the plots allows the points to shift slightly in a random direction in order to reduce data point overlap -- hence the word *jitter* in the name. These plots can display the same data as bar and line graphs (i.e., means and error bars) while helping the viewer grasp the full variability in the data. Figure \@ref(fig:apajitter) shows an example in APA format.
+
+```{r apajitter, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Sample APA-style jitter plot showing hypothetical data.'}
+knitr::include_graphics("images/ch12/apajitter.png")
+```
+
+The jitter plot above was generated using the free online application [ShowMyData](https://www.showmydata.org/).
+:::
 
 ### Expressing Descriptive Statistics in Tables {-}
 
@@ -476,14 +487,14 @@ Like graphs, tables can be used to present large amounts of information clearly 
 
 The most common use of tables is to present several means and standard deviations—usually for complex research designs with multiple independent and dependent variables. Figure \@ref(fig:apatable), for example, shows the results of a hypothetical study similar to the one by @macdonald2002self. (The means in Figure \@ref(fig:apatable) are the means reported by MacDonald and Martineau, but the standard errors are not). Recall that these researchers categorized participants as having low or high self-esteem, put them into a negative or positive mood, and measured their intentions to have unprotected sex. They also measured participants’ attitudes toward unprotected sex. Notice that the table includes horizontal lines spanning the entire table at the top and bottom, and just beneath the column headings. Furthermore, every column has a heading—including the leftmost column—and there are additional headings that span two or more columns that help to organize the information and present it more efficiently. Finally, notice that APA-style tables are numbered consecutively starting at 1 (Table 1, Table 2, and so on) and given a brief but clear and descriptive title.
 
-```{r apatable, echo = FALSE, out.width='80%', fig.align = 'center', fig.cap='Sample APA-style table presenting means and standard deviations.'}
-knitr::include_graphics("images/ch12/apatable.jpeg")
+```{r apatable, echo = FALSE, out.width='65%', fig.align = 'center', fig.cap='Sample APA-style table presenting means and standard deviations.'}
+knitr::include_graphics("images/ch12/apatable.png")
 ```
 
 Another common use of tables is to present correlations—usually measured by Pearson’s *r*—among several variables. This is called a [correlation matrix]. Figure \@ref(fig:apamatrix) is a correlation matrix based on a study by David McCabe and colleagues [@mccabe2010relationship]. They were interested in the relationships between working memory and several other variables. We can see from the table that the correlation between working memory and executive function, for example, was an extremely strong .96, that the correlation between working memory and vocabulary was a medium .27, and that all the measures except vocabulary tend to decline with age. Notice here that only half the table is filled in because the other half would have identical values. For example, the Pearson’s *r* value in the upper right corner (working memory and age) would be the same as the one in the lower left corner (age and working memory). The correlation of a variable with itself is always 1.00, so these values are replaced by dashes to make the table easier to read.
 
-```{r apamatrix, echo = FALSE, out.width='85%', fig.align = 'center', fig.cap='Sample APA-style table (correlation matrix) based on research by McCabe and colleagues.'}
-knitr::include_graphics("images/ch12/apamatrix.jpeg")
+```{r apamatrix, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Sample APA-style table (correlation matrix) based on research by McCabe and colleagues.'}
+knitr::include_graphics("images/ch12/apamatrix.png")
 ```
 
 As with graphs, precise statistical results that appear in a table do not need to be repeated in the text. Instead, the writer can note major trends and alert the reader to details (e.g., specific correlations) that are of particular interest.
@@ -492,7 +503,7 @@ As with graphs, precise statistical results that appear in a table do not need t
 ##### KEY TAKEAWAYS {-}
 - In an APA-style article, simple results are most efficiently presented in the text, while more complex results are most efficiently presented in graphs or tables.
 - APA style includes several rules for presenting numerical results in the text. These include using words only for numbers less than 10 that do not represent precise statistical results, and rounding results to two decimal places, using words (e.g., “mean”) in the text and symbols (e.g., “*M*”) in parentheses.
-- APA style includes several rules for presenting results in graphs and tables. Graphs and tables should add information rather than repeating information, be as simple as possible, and be interpretable on their own with a descriptive caption (for graphs) or a descriptive title (for tables).
+- APA style includes several rules for presenting results in graphs and tables. Graphs and tables should add information rather than repeating information, be as simple as possible, and be interpretable on their own with a descriptive title.
 :::
 
 :::exercises
@@ -542,11 +553,7 @@ Keep in mind that outliers do not *necessarily* represent an error, misunderstan
 
 Finally, you are ready to answer your primary research questions. If you are interested in a difference between group or condition means, you can compute the relevant group or condition means and standard deviations, make a bar graph to display the results, and compute Cohen’s *d*. If you are interested in a correlation between quantitative variables, you can make a line graph or scatterplot (be sure to check for nonlinearity and restriction of range) and compute Pearson’s *r*.
 
-At this point, you should also explore your data for other interesting results that might provide the basis for future research (and material for the discussion section of your paper). Daryl @bem2003writing suggests that you
-
-> [e]xamine [your data] from every angle. Analyze the sexes separately. Make up new composite indexes. If a datum suggests a new hypothesis, try to find additional evidence for it elsewhere in the data. If you see dim traces of interesting patterns, try to reorganize the data to bring them into bolder relief. If there are participants you don’t like, or trials, observers, or interviewers who gave you anomalous results, drop them (temporarily). Go on a fishing expedition for something—anything—interesting. (p. 186–187)
-
-It is important to be cautious, however, because complex sets of data are likely to include “patterns” that occurred entirely by chance. Thus results discovered while “fishing” should be replicated in at least one new study before being presented as new phenomena in their own right.
+At this point, you may want to conduct exploratory analyses that might provide the basis for future research (and material for the discussion section of your paper). It is important to be cautious, however, because complex sets of data are likely to include “patterns” that occurred entirely by chance. Thus results discovered while “fishing” should be replicated in at least one new study before being presented as new phenomena in their own right.
 
 ### Understand Your Descriptive Statistics {-}
 
