update plots ch 10 and 13

--- a/11-presenting.Rmd
+++ b/11-presenting.Rmd
@@ -411,7 +411,7 @@ Recall that [review articles](#review-article) summarize research on a particula
 
 We have focused on the formatting of manuscripts that will be submitted to a professional journal for publication. These are referred to as [copy manuscripts](#copy-manuscript). Many features of a copy manuscript—consistent double-spacing, the running head, and the placement of tables and figures at the end—are intended to make it easier to edit and typeset on its way to publication. The published journal article looks quite different from the copy manuscript. For example, the title and author information, the abstract, and the beginning of the introduction generally appear on the same page rather than on separate pages. In contrast, other types of manuscripts are prepared by the author in their final form with no intention of submitting them for publication elsewhere. These are called [final manuscripts](#final-manuscript) and include dissertations, theses, and other student papers.
 
-Final manuscripts can differ from copy manuscripts in a number of ways that make them easier to read. This can include variations in line spacing that improve readability—such as using single spacing for table titles and figure captions or triple spacing between major sections or around tables and figures. Dissertations and theses can differ from copy manuscripts in additional ways. They may have a longer abstract, a special acknowledgments page, a table of contents, and so on. For student papers, it is important to check with the course instructor about formatting specifics. In a research methods course, papers are often required to be written as though they were copy manuscripts being submitted for publication (see box [Professional Paper or Student Paper?]).
+Final manuscripts can differ from copy manuscripts in a number of ways that make them easier to read. This can include variations in line spacing that improve readability—such as using single spacing for table titles and figure captions or triple spacing between major sections or around tables and figures. Dissertations and theses can differ from copy manuscripts in additional ways. They may have a longer abstract, a special acknowledgments page, a table of contents, and so on. For student papers, it is important to check with the course instructor about formatting specifics. In a research methods course, papers are often required to be written as though they were copy manuscripts being submitted for publication (see box [Professional or Student Paper?]).
 
 ### Conference Presentations {-}
 
