--- a/13-inferentials.Rmd
+++ b/13-inferentials.Rmd
@@ -124,7 +124,11 @@ Again, *M* is the sample mean and µ0 is the hypothetical population mean of int
 The reason the *t* statistic (or any test statistic) is useful is that we know how it is distributed when the null hypothesis is true. As shown in Figure \@ref(fig:tdist), this distribution is unimodal and symmetrical, and it has a mean of 0. Its precise shape depends on a statistical concept called the degrees of freedom, which for a one-sample *t* test is N − 1. (There are 24 degrees of freedom for the distribution shown in Figure \@ref(fig:tdist).) The important point is that knowing this distribution makes it possible to find the *p* value for any *t* score. Consider, for example, a *t* score of +1.50 based on a sample of 25. The probability of a *t* score at least this extreme is given by the proportion of *t* scores in the distribution that are at least this extreme. For now, let us define extreme as being far from zero in either direction. Thus the *p* value is the proportion of *t* scores that are +1.50 or above or that are −1.50 or below—a value that turns out to be .14.
 
 ```{r tdist, echo = FALSE, out.width='80%', fig.align = 'center', fig.cap='Distribution of *t* scores (with 24 degrees of freedom) when the null hypothesis is true. The red vertical lines represent the two-tailed critical values, and the green vertical lines the one-tailed critical values when α = .05.'}
-knitr::include_graphics("images/ch13/tdist.jpeg")
+curve(dt(x, df = 24), from = -3, to = 3, n = 5000, col= '#117EA7', lwd=2, xlab = "t", ylab = "density")
+abline(v = 2.064, lty = 2, lwd = 1, col = '#F14124')
+abline(v = -2.064, lty = 2, lwd = 1, col = '#F14124')
+abline(v = 1.711, lty = 2, lwd = 1, col = '#568D11')
+abline(v = -1.711, lty = 2, lwd = 1, col = '#568D11')
 ```
 
 Fortunately, we do not have to deal directly with the distribution of *t* scores. If we were to enter our sample data and hypothetical mean of interest into one of the online statistical tools in the chapter on "Descriptive Statistics" or into a program like SPSS (Excel does not have a one-sample *t* test function), the output would include both the *t* score and the *p* value. At this point, the rest of the procedure is simple. If *p* is less than .05, we reject the null hypothesis and conclude that the population mean differs from the hypothetical mean of interest. If *p* is greater than .05, we retain the null hypothesis and conclude that there is not enough evidence to say that the population mean differs from the hypothetical mean of interest. (Again, technically, we conclude only that we do not have enough evidence to conclude that it *does* differ.)
@@ -253,8 +257,9 @@ $F=\frac{MS_B}{MS_W}$
 
 Again, the reason that *F* is useful is that we know how it is distributed when the null hypothesis is true. As shown in Figure \@ref(fig:fdist), this distribution is unimodal and positively skewed with values that cluster around 1. The precise shape of the distribution depends on both the number of groups and the sample size, and there is a degrees of freedom value associated with each of these. The between-groups degrees of freedom is the number of groups minus one: *df~B~* = (*G* − 1). The within-groups degrees of freedom is the total sample size minus the number of groups: *df~W~* = *N* − *G*. Again, knowing the distribution of *F* when the null hypothesis is true allows us to find the *p* value.
 
-```{r fdist, echo = FALSE, out.width='80%', fig.align = 'center', fig.cap='Distribution of *F* ratio with 2 and 37 degrees of freedome when the null hypothesis is true. The red vertical line represents the critical value when α is .05.'}
-knitr::include_graphics("images/ch13/fdist.jpeg")
+```{r fdist, echo = FALSE, out.width='80%', fig.align = 'center', fig.cap='Distribution of *F* ratio with 3 and 35 degrees of freedom when the null hypothesis is true. The red vertical line represents the critical value when α is .05.'}
+curve(df(x, df1 = 3, df2 = 35), from = 0, to = 8, n = 5000, col= '#117EA7', lwd=2, xlab = "F", ylab = "density")
+abline(v = 2.874, lty = 2, lwd = 1, col = '#F14124')
 ```
 
 The online tools in the chapter on "Descriptive Statistics" and statistical software such as Excel and SPSS will compute *F* and find the *p* value. If *p* is less than .05, then we reject the null hypothesis and conclude that there are differences among the group means in the population. If *p* is greater than .05, then we retain the null hypothesis and conclude that there is not enough evidence to say that there are differences. In the unlikely event that we would compute *F* by hand, we can use a table of critical values like Table 13.3 "Table of Critical Values of " to make the decision. The idea is that any *F* ratio greater than the critical value has a *p* value of less than .05. Thus if the *F* ratio we compute is beyond the critical value, then we reject the null hypothesis. If the *F* ratio we compute is less than the critical value, then we retain the null hypothesis.
@@ -398,7 +403,7 @@ In this section, we consider a few other issues related to null hypothesis testi
 In null hypothesis testing, the researcher tries to draw a reasonable conclusion about the population based on the sample. Unfortunately, this conclusion is not guaranteed to be correct. This is illustrated by Figure \@ref(fig:errors). The rows of this table represent the two possible decisions that we can make in null hypothesis testing: to reject or retain the null hypothesis. The columns represent the two possible states of the world: The null hypothesis is false or it is true. The four cells of the table, then, represent the four distinct outcomes of a null hypothesis test. Two of the outcomes—rejecting the null hypothesis when it is false and retaining it when it is true—are correct decisions. The other two—rejecting the null hypothesis when it is true and retaining it when it is false—are errors.
 
 ```{r errors, echo = FALSE, out.width='50%', fig.align = 'center', fig.cap='Two types of correct decisions and two types of errors in null hypothesis testing.'}
-knitr::include_graphics("images/ch13/errors.jpeg")
+knitr::include_graphics("images/ch13/errors.png")
 ```
 
 Rejecting the null hypothesis when it is true is called a [Type I error]. This means that we have concluded that there is a relationship in the population when in fact there is not. Type I errors occur because even when there is no relationship in the population, sampling error alone will occasionally produce an extreme result. In fact, when the null hypothesis is true and α is .05, we will mistakenly reject the null hypothesis 5% of the time. (This is why α is sometimes referred to as the “Type I error rate.”) Retaining the null hypothesis when it is false is called a [Type II error]. This means that we have concluded that there is no relationship in the population when in fact there is. In practice, Type II errors occur primarily because the research design lacks adequate statistical power to detect the relationship (e.g., the sample is too small). We will have more to say about statistical power shortly.
