--- a/10-single-N.Rmd
+++ b/10-single-N.Rmd
@@ -97,8 +97,25 @@ Although most contemporary single-subject research is conducted from the behavio
 
 Before looking at any specific single-subject research designs, it will be helpful to consider some features that are common to most of them. Many of these features are illustrated in Figure \@ref(fig:aba), which shows the results of a generic single-subject study. First, the dependent variable (represented on the y-axis of the graph) is measured repeatedly over time (represented by the x-axis) at regular intervals. Second, the study is divided into distinct phases, and the participant is tested under one condition per phase. The conditions are often designated by capital letters: A, B, C, and so on. Thus Figure \@ref(fig:aba) represents a design in which the participant was tested first in one condition (A), then tested in another condition (B), and finally retested in the original condition (A). (This is called a reversal design and will be discussed in more detail shortly.)
 
-```{r aba, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Results of a generic single-subject study illustrating several principles of single-subject research.'}
-knitr::include_graphics("images/ch10/aba.jpeg")
+```{r aba, echo = FALSE, out.width='70%', fig.asp = .6, fig.align = 'center', fig.cap='Results of a generic single-subject study illustrating several principles of single-subject research.'}
+x1 <- c(1,2,3,4,5,6,7,8,9,10)
+x2 <- c(11,12,13,14,15,16,17,18,19,20)
+x3 <- c(21,22,23,24,25,26,27,28,29,30)
+y1 <- c(4,6,3,6,3,4,4,3,5,4)
+y2 <- c(7,8,7,6,7,8,9,6,8,7)
+y3 <- c(4,6,5,4,5,4,5,3,4,5)
+
+par(mar = c(4, 4, 0.1, 0.1))  
+
+plot(x1, y1, type = "b", xlab = "Time", ylab = "Dependent Variable", ylim = c(1,10), xlim = c(0,30), xaxt='n', yaxt='n', pch = 19, col = "#117EA7")
+lines(x2, y2, type = "b", pch = 19, col = "#117EA7")
+lines(x3, y3, type = "b", pch = 19, col = "#117EA7")
+grid(NA, 10, lty = 2, col = "#7F7F7F40", lwd = 1)
+abline(v = 10.5, lwd = 1)
+abline(v = 20.5, lwd = 1)
+text(5,2, "A")
+text(15,2, "B")
+text(25,2, "A")
 ```
 
 Another important aspect of single-subject research is that the change from one condition to the next does not usually occur after a fixed amount of time or number of observations. Instead, it depends on the participant’s behavior. Specifically, the researcher waits until the participant’s behavior in one condition becomes fairly consistent from observation to observation before changing conditions. This is sometimes referred to as the [steady state strategy] [@sidman1960tactics]. The idea is that when the dependent variable has reached a steady state, then any change across conditions will be relatively easy to detect. Recall that we encountered this same principle when discussing experimental research more generally. The effect of an independent variable is easier to detect when the “noise” in the data is minimized.
@@ -109,9 +126,32 @@ The most basic single-subject research design is the [reversal design], also cal
 
 The study by Hall and his colleagues was an ABAB reversal design. Figure \@ref(fig:abab) approximates the data for Robbie. The percentage of time he spent studying (the dependent variable) was low during the first baseline phase, increased during the first treatment phase until it leveled off, decreased during the second baseline phase, and again increased during the second treatment phase.
 
-```{r abab, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='An approximation of the results for Hall and colleagues’ participant Robbie in their ABAB reversal design.'}
-knitr::include_graphics("images/ch10/abab.jpeg")
+```{r abab, echo = FALSE, out.width='70%', fig.asp = .6, fig.align = 'center', fig.cap='An approximation of the results for Hall and colleagues’ participant Robbie in their ABAB reversal design.'}
+x1 <- c(1,2,3,4,5,6,7)
+x2 <- c(8,9,10,11,12,13,14,15,16)
+x3 <- c(17,18,19,20,21)
+x4 <- c(22,23,24,25,26,27,28,29,30,31)
+y1 <- c(25,20,39,12,25,30,32)
+y2 <- c(53,67,72,75,82,70,79,60,70)
+y3 <- c(55,38,52,50,40)
+y4 <- c(35,60,56,52,65,82,70,60,76,79)
+
+par(mar = c(4, 4, 0.1, 0.1))  
+
+plot(x1, y1, type = "b", xlab = "Sessions", ylab = "Percentage of Time Studying", ylim = c(0,100), xlim = c(0,31), pch = 19, col = "#117EA7")
+lines(x2, y2, type = "b", pch = 19, col = "#117EA7")
+lines(x3, y3, type = "b", pch = 19, col = "#117EA7")
+lines(x4, y4, type = "b", pch = 19, col = "#117EA7")
+grid(NA, NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
+abline(v = 7.5, lwd = 1)
+abline(v = 16.5, lwd = 1)
+abline(v = 21.5, lwd = 1)
+text(3.5,95, "Baseline")
+text(12,95, "Positive attention")
+text(19,95, "Baseline")
+text(26.5,95, "Positive attention")
 ```
+
 
 Why is the reversal—the removal of the treatment—considered to be necessary in this type of design? Why use an ABA design, for example, rather than a simpler AB design? Notice that an AB design is essentially an interrupted time-series design applied to an individual participant. Recall that one problem with that design is that if the dependent variable changes after the treatment is introduced, it is not always clear that the treatment was responsible for the change. It is possible that something else changed at around the same time and that this extraneous variable is responsible for the change in the dependent variable. But if the dependent variable changes with the introduction of the treatment and then changes *back* with the removal of the treatment, it is much clearer that the treatment (and removal of the treatment) is the cause. In other words, the reversal greatly increases the internal validity of the study.
 
@@ -125,10 +165,43 @@ There are two potential problems with the reversal design—both of which have t
 
 One solution to these problems is to use a [multiple-baseline design], which is represented in Figure \@ref(fig:multiple). In one version of the design, a baseline is established for each of several participants, and the treatment is then introduced for each one. In essence, each participant is tested in an AB design. The key to this design is that the treatment is introduced at a different time for each participant. The idea is that if the dependent variable changes when the treatment is introduced for one participant, it might be a coincidence. But if the dependent variable changes when the treatment is introduced for multiple participants—especially when the treatment is introduced at different times for the different participants—then it is extremely unlikely to be a coincidence.
 
-```{r multiple, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Results of a generic multiple-baseline study. The multiple baselines can be for different participants, dependent variables, or settings. The treatment is introduced at a different time on each baseline.'}
-knitr::include_graphics("images/ch10/multiple.jpeg")
-```
+```{r multiple, echo = FALSE, out.width='70%', fig.asp = .4, fig.align = 'center', fig.show = 'hold', fig.cap='Results of a generic multiple-baseline study. The multiple baselines can be for different participants, dependent variables, or settings. The treatment is introduced at a different time on each baseline.'}
+x1 <- c(1,2,3,4,5,6)
+x2 <- c(7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24)
+x3 <- c(1,2,3,4,5,6,7,8,9,10,11,12)
+x4 <- c(13,14,15,16,17,18,19,20,21,22,23,24)
+x5 <- c(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18)
+x6 <- c(19,20,21,22,23,24)
+y1 <- c(12,14,13,12,14,16)
+y2 <- c(10,10,9,7,9,6,8,5,6,5,6,7,4,5,4,5,5,7)
+y3 <- c(13,14,12,15,12,10,13,14,13,12,14,13)
+y4 <- c(7,10,12,9,10,8,10,9,8,9,8,9)
+y5 <- c(15,13,14,15,12,14,16,15,12,13,15,13,12,14,15,10,14,15)
+y6 <- c(10,9,8,9,8,9)
 
+par(mar = c(4, 4, 0.1, 0.1))  
+
+plot(x1, y1, type = "b", ylab = "Baseline 1", xlab = NA, ylim = c(1,18), xlim = c(1,24), xaxt='n', pch = 19, col = "#117EA7")
+lines(x2, y2, type = "b", pch = 19, col = "#117EA7")
+grid(NA, NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
+abline(v = 6.5, lwd = 1)
+text(3.5,17, "Baseline")
+text(15.5,17, "Treatment")
+
+plot(x3, y3, type = "b", ylab = "Baseline 2", xlab = NA, ylim = c(1,18), xlim = c(1,24), xaxt='n', pch = 19, col = "#117EA7")
+lines(x4, y4, type = "b", pch = 19, col = "#117EA7")
+grid(NA, NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
+abline(v = 12.5, lwd = 1)
+text(6.5,17, "Baseline")
+text(18.5,17, "Treatment")
+
+plot(x5, y5, type = "b", ylab = "Baseline 3", xlab = NA, ylim = c(1,18), xlim = c(1,24), pch = 19, col = "#117EA7")
+lines(x6, y6, type = "b", pch = 19, col = "#117EA7")
+grid(NA, NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
+abline(v = 18.5, lwd = 1)
+text(9.5,17, "Baseline")
+text(21.5,17, "Treatment")
+```
 
 As an example, consider a study by Scott Ross and Robert Horner [@ross2009bully]. They were interested in how a school-wide bullying prevention program affected the bullying behavior of particular problem students. At each of three different schools, the researchers studied two students who had regularly engaged in bullying. During the baseline phase, they observed the students for 10-minute periods each day during lunch recess and counted the number of aggressive behaviors they exhibited toward their peers. (The researchers used handheld computers to help record the data.) After 2 weeks, they implemented the program at one school. After 2 more weeks, they implemented it at the second school. And after 2 more weeks, they implemented it at the third school. They found that the number of aggressive behaviors exhibited by each student dropped shortly after the program was implemented at his or her school. Notice that if the researchers had only studied one school or if they had introduced the treatment at the same time at all three schools, then it would be unclear whether the reduction in aggressive behaviors was due to the bullying program or something else that happened at about the same time it was introduced (e.g., a holiday, a television program, a change in the weather). But with their multiple-baseline design, this kind of coincidence would have to happen three separate times—a very unlikely occurrence—to explain their results.
 
@@ -144,8 +217,41 @@ In visually inspecting their data, single-subject researchers take several facto
 
 In the top panel of Figure \@ref(fig:aba2), there are fairly obvious changes in the level and trend of the dependent variable from condition to condition. Furthermore, the latencies of these changes are short; the change happens immediately. This pattern of results strongly suggests that the treatment was responsible for the changes in the dependent variable. In the bottom panel of Figure \@ref(fig:aba2), however, the changes in level are fairly small. And although there appears to be an increasing trend in the treatment condition, it looks as though it might be a continuation of a trend that had already begun during baseline. This pattern of results strongly suggests that the treatment was not responsible for any changes in the dependent variable—at least not to the extent that single-subject researchers typically hope to see.
 
-```{r aba2, echo = FALSE, out.width='60%', fig.align = 'center', fig.cap='Visual inspection of the data suggests an effective treatment in the top panel but an ineffective treatment in the bottom panel.'}
-knitr::include_graphics("images/ch10/aba2.jpeg")
+```{r aba2, echo = FALSE, out.width='60%', fig.asp = .5, fig.align = 'center', fig.show = 'hold', fig.cap='Visual inspection of the data suggests an effective treatment in the top panel but an ineffective treatment in the bottom panel.'}
+x1 <- c(1,2,3,4,5,6,7,8)
+x2 <- c(9,10,11,12,13,14,15,16)
+x3 <- c(17,18,19,20,21,22,23,24)
+x4 <- c(1,2,3,4,5,6,7,8)
+x5 <- c(9,10,11,12,13,14,15,16)
+x6 <- c(17,18,19,20,21,22,23,24)
+y1 <- c(12,14,13,12,14,16,15,16)
+y2 <- c(9,7,9,6,8,5,6,5)
+y3 <- c(10,12,10,13,12,14,13,14)
+y4 <- c(5,7,6,5,7,9,8,9)
+y5 <- c(10,8,10,9,7,11,10,11)
+y6 <- c(10,8,10,9,8,9,8,9)
+
+par(mar = c(4, 4, 0.1, 0.1))  
+
+plot(x1, y1, type = "b", ylab = "Baseline 1", xlab = "Observations", ylim = c(1,18), xlim = c(1,24), pch = 19, col = "#117EA7")
+lines(x2, y2, type = "b", pch = 19, col = "#117EA7")
+lines(x3, y3, type = "b", pch = 19, col = "#117EA7")
+grid(NA, NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
+abline(v = 8.5, lwd = 1)
+abline(v = 16.5, lwd = 1)
+text(5,2, "A")
+text(13,2, "B")
+text(21,2, "A")
+
+plot(x4, y4, type = "b", ylab = "Baseline 2", xlab = "Observations", ylim = c(1,18), xlim = c(1,24), pch = 19, col = "#117EA7")
+lines(x5, y5, type = "b", pch = 19, col = "#117EA7")
+lines(x6, y6, type = "b", pch = 19, col = "#117EA7")
+grid(NA, NULL, lty = 2, col = "#7F7F7F40", lwd = 1)
+abline(v = 8.5, lwd = 1)
+abline(v = 16.5, lwd = 1)
+text(5,2, "A")
+text(13,2, "B")
+text(21,2, "A")
 ```
 
 The results of single-subject research can also be analyzed using statistical procedures—and this is becoming more common. There are many different approaches, and single-subject researchers continue to debate which are the most useful. One approach parallels what is typically done in group research. The mean and standard deviation of each participant’s responses under each condition are computed and compared, and inferential statistical tests such as the t test or analysis of variance are applied [@fisch2001evaluating]. (Note that averaging across participants is less common.) Another approach is to compute the [percentage of nonoverlapping data] (PND) for each participant [@scruggs2021summarize]. This is the percentage of responses in the treatment condition that are more extreme than the most extreme response in a relevant control condition. In the study of Hall and his colleagues, for example, all measures of Robbie’s study time in the first treatment condition were greater than the highest measure in the first baseline, for a PND of 100%. The greater the percentage of nonoverlapping data, the stronger the treatment effect. Still, formal statistical approaches to data analysis in single-subject research are generally considered a supplement to visual inspection, not a replacement for it.
