fix table reference

--- a/13-inferentials.Rmd
+++ b/13-inferentials.Rmd
@@ -262,7 +262,7 @@ curve(df(x, df1 = 3, df2 = 35), from = 0, to = 8, n = 5000, col= '#117EA7', lwd=
 abline(v = 2.874, lty = 2, lwd = 1, col = '#F14124')
 ```
 
-The online tools in the chapter on "Descriptive Statistics" and statistical software such as Excel and SPSS will compute *F* and find the *p* value. If *p* is less than .05, then we reject the null hypothesis and conclude that there are differences among the group means in the population. If *p* is greater than .05, then we retain the null hypothesis and conclude that there is not enough evidence to say that there are differences. In the unlikely event that we would compute *F* by hand, we can use a table of critical values like Table 13.3 "Table of Critical Values of " to make the decision. The idea is that any *F* ratio greater than the critical value has a *p* value of less than .05. Thus if the *F* ratio we compute is beyond the critical value, then we reject the null hypothesis. If the *F* ratio we compute is less than the critical value, then we retain the null hypothesis.
+The online tools in the chapter on "Descriptive Statistics" and statistical software such as Excel and SPSS will compute *F* and find the *p* value. If *p* is less than .05, then we reject the null hypothesis and conclude that there are differences among the group means in the population. If *p* is greater than .05, then we retain the null hypothesis and conclude that there is not enough evidence to say that there are differences. In the unlikely event that we would compute *F* by hand, we can use a table of critical values like Table \@ref(fig:fcrit) to make the decision. The idea is that any *F* ratio greater than the critical value has a *p* value of less than .05. Thus if the *F* ratio we compute is beyond the critical value, then we reject the null hypothesis. If the *F* ratio we compute is less than the critical value, then we retain the null hypothesis.
 
 Table: (\#tab:fcrit) Table of Critical Values of *F* When α = .05. Values in the first column represent *df~W~*; values in the first row represent *df~B~*.
 
