--- a/09-surveys.Rmd
+++ b/09-surveys.Rmd
@@ -219,11 +219,171 @@ Survey researchers, however, are much more likely to use some form of probabilit
 
 Compared with nonprobability sampling, probability sampling requires a very clear specification of the population, which of course depends on the research questions to be answered. The population might be all registered voters in the state of Arkansas, all American consumers who have purchased a car in the past year, women in the United States over 40 years old who have received a mammogram in the past decade, or all the alumni of a particular university. Once the population has been specified, probability sampling requires a [sampling frame]. This is essentially a list of all the members of the population from which to select the respondents. Sampling frames can come from a variety of sources, including telephone directories, lists of registered voters, and hospital or insurance records. In some cases, a map can serve as a sampling frame, allowing for the selection of cities, streets, or households.
 
-There are a variety of different probability sampling methods. [Simple random sampling] is done in such a way that each individual in the population has an equal probability of being selected for the sample. This could involve putting the names of all individuals in the sampling frame into a hat, mixing them up, and then drawing out the number needed for the sample. Given that most sampling frames take the form of computer files, random sampling is more likely to involve computerized sorting or selection of respondents. A common approach in telephone surveys is random-digit dialing, in which a computer randomly generates phone numbers from among the possible phone numbers within a given geographic area.
+There are a variety of different probability sampling methods. [Simple random sampling] is done in such a way that each individual in the population has an equal probability of being selected for the sample (Figure \@ref(fig:simple)). This could involve putting the names of all individuals in the sampling frame into a hat, mixing them up, and then drawing out the number needed for the sample. Given that most sampling frames take the form of computer files, random sampling is more likely to involve computerized sorting or selection of respondents. A common approach in telephone surveys is random-digit dialing, in which a computer randomly generates phone numbers from among the possible phone numbers within a given geographic area.
 
-A common alternative to simple random sampling is [stratified random sampling], in which the population is divided into different subgroups or “strata” (usually based on demographic characteristics) and then a random sample is taken from each “stratum.” Stratified random sampling can be used to select a sample in which the proportion of respondents in each of various subgroups matches the proportion in the population. For example, because about 12.5% of the US population is Black, stratified random sampling can be used to ensure that a survey of 1,000 American adults includes about 125 Black respondents. Stratified random sampling can also be used to sample extra respondents from particularly small subgroups—allowing valid conclusions to be drawn about those subgroups. For example, because Asian Americans make up a fairly small percentage of the US population (about 4.5%), a simple random sample of 1,000 American adults might include too few Asian Americans to draw any conclusions about them as distinct from any other subgroup. If this is important to the research question, however, then stratified random sampling could be used to ensure that enough Asian American respondents are included in the sample to draw valid conclusions about Asian Americans as a whole.
+```{r simple, echo = FALSE, fig.cap="Example of simple random sampling. Simple random sampling was used to randomly select the 18 cases (denoted with filled-in dots).", fig.width = 10, out.width = "95%", fig.alt = "Box shows a population of dots (i.e., individuals) where a handful of the dots have been sampled randomly."}
 
-Yet another type of probability sampling is [cluster sampling], in which larger clusters of individuals are randomly sampled and then individuals within each cluster are randomly sampled. For example, to select a sample of small-town residents in the United States, a researcher might randomly select several small towns and then randomly select several individuals within each town. Cluster sampling is especially useful for surveys that involve face-to-face interviewing because it minimizes the amount of traveling that the interviewers must do. For example, instead of traveling to 200 small towns to interview 200 residents, a research team could travel to 10 small towns and interview 20 residents of each. The National Comorbidity Survey was done using a form of cluster sampling.
+set.seed(1)
+
+# _____ Simple Random _____ #
+build_srs <- function(n, N) {
+  
+  plot(0, xlim = c(0,2), ylim = 0:1, type = 'n', axes = FALSE)
+  box()
+  x   <- runif(N, 0, 2)
+  y   <- runif(N)
+  inc <- n
+  points(x, y)
+  
+  these <- sample(N, n)
+  points(x[these], y[these], pch = 20, cex = .8)
+  points(x[these], y[these], cex = 1.4)
+}
+
+par_og <- par(no.readonly = TRUE)     # save original par
+par(mar = rep(0.5,4), mfrow = c(1,1)) # no margin, 1 figure
+build_srs(n = 18, N = 108)            # build figure
+par(par_og)                           # restore original par
+```
+
+A common alternative to simple random sampling is [stratified random sampling], in which the population is divided into different subgroups or “strata” (usually based on demographic characteristics) and then a random sample is taken from each “stratum" (Figure \@ref(fig:stratified)). Stratified random sampling can be used to select a sample in which the proportion of respondents in each of various subgroups matches the proportion in the population. For example, because about 12.5% of the US population is Black, stratified random sampling can be used to ensure that a survey of 1,000 American adults includes about 125 Black respondents. Stratified random sampling can also be used to sample extra respondents from particularly small subgroups—allowing valid conclusions to be drawn about those subgroups. For example, because Asian Americans make up a fairly small percentage of the US population (about 4.5%), a simple random sample of 1,000 American adults might include too few Asian Americans to draw any conclusions about them as distinct from any other subgroup. If this is important to the research question, however, then stratified random sampling could be used to ensure that enough Asian American respondents are included in the sample to draw valid conclusions about Asian Americans as a whole.
+
+```{r stratified, echo = FALSE, fig.cap="Example of stratified random sampling. Cases were first grouped into strata, or subgroups, then simple random sampling was employed to randomly select 20% of cases within each stratum. The resulting sample reflects the proportion of cases in each subgroup.", fig.width = 10, out.width = "95%", fig.alt = "The box shows the same population of dots but grouped in such a way that there are six strata.  From each stratum 20% of the dots (i.e., individuals) are randomly selected."}
+
+set.seed(14)
+
+# _____ Stratified _____ #
+build_stratified <- function(N) {
+  
+  plot(0, xlim = c(0,2), ylim = 0:1 + 0.01,
+       type = 'n', axes = FALSE)
+  box()
+  X    <- c(0.18, 0.3, 0.68, 1.18, 1.4, 1.74)
+  Y    <- c(0.2, 0.78, 0.44, 0.7, 0.25, 0.65)
+  locs <- c(1, 4, 5, 3, 6, 2)
+  gps  <- list()
+  N    <- c(10, 10, 40, 20, 10, 30)
+  R    <- sqrt(N/500)
+  p    <- matrix(c(12, 2, NA,
+                   1,  2, NA,
+                   4,  30, NA,
+                   19, 1, NA,
+                   11, 0, NA,
+                   3, 24, NA), 3)
+  p     <- round(p * 1.1)
+  p[3,] <- N - p[1,] - p[2,]
+  above <- c(1, 1, 1, 1, -1, 1)
+  for(i in 1:6){
+    hold <- seq(0, 2 * pi, length.out = 99)
+    x    <- X[i] + (R[i]+0.01)*cos(hold)
+    y    <- Y[i] + (R[i]+0.01)*sin(hold)
+    polygon(x, y)
+    x    <- rep(NA, N[i])
+    y    <- rep(NA, N[i])
+    for(j in 1:N[i]){
+      inside <- FALSE
+      while(!inside){
+        xx <- runif(1, -R[i], R[i])
+        yy <- runif(1, -R[i], R[i])
+        if(sqrt(xx^2 + yy^2) < R[i]){
+          inside <- TRUE
+          x[j]   <- xx
+          y[j]   <- yy
+        }
+      }
+    }
+    type <- sample(1, N[i], TRUE)
+    x    <- X[i]+x
+    y    <- Y[i]+y
+    points(x, y)
+    these  <- sample(N[i], N[i]*.2)
+    points(x[these], y[these],
+           pch = 20, cex = 0.8)
+    points(x[these], y[these], cex = 1.4)
+  }
+  text(X, Y + above * (R),
+       paste("Stratum", 1:6),
+       pos = 2 + above,
+       cex = 1.3)
+}
+
+par_og <- par(no.readonly = TRUE)     # save original par
+par(mar = rep(0.5,4), mfrow = c(1,1)) # no margin, 2 figures 
+build_stratified(N = 108)             # build figure
+par(par_og)                           # restore original par
+```
+
+Yet another type of probability sampling is [cluster sampling], in which larger clusters of individuals are randomly sampled and then individuals within each cluster are randomly sampled (Figure \@ref(fig:cluster)). For example, to select a sample of small-town residents in the United States, a researcher might randomly select several small towns and then randomly select several individuals within each town. Cluster sampling is especially useful for surveys that involve face-to-face interviewing because it minimizes the amount of traveling that the interviewers must do. For example, instead of traveling to 200 small towns to interview 200 residents, a research team could travel to 10 small towns and interview 20 residents of each. The National Comorbidity Survey was done using a form of cluster sampling.
+
+```{r cluster, echo = FALSE, fig.cap="Example of cluster sampling. Data were binned into nine clusters, three of these clusters were sampled, and all observations within these three clusters were included in the sample.", fig.width = 10, out.width = "100%", fig.alt = "Dots are grouped into clusters, three clusters are selected, and every dot (i.e., all individuals) from each of the three clusters are sampled."}
+
+set.seed(5)
+
+# _____ Cluster _____ #
+build_cluster <- function() {
+  plot(0, xlim = c(0, 2), ylim  =  c(0.01, 1.04), type = 'n', axes = FALSE)
+  box()
+  X    <- c(0.17, 0.19, 0.52, 0.85, 1, 1.22, 1.49, 1.79, 1.85)
+  Y    <- c(0.3, 0.75, 0.5, 0.26, 0.73, 0.38, 0.67, 0.3, 0.8)
+  locs <- c(1, 4, 5, 3, 6, 2)
+  gps  <- list()
+  N    <- c(18, 12, 11, 13, 16, 14, 15, 16, 12)
+  R    <- sqrt(N/500)
+  p    <- matrix(c(6,  8, NA,
+                   4,  4, NA,
+                   4,  4, NA,
+                   5,  4, NA,
+                   8,  5, NA,
+                   4,  5, NA,
+                   5,  9, NA,
+                   6,  5, NA,
+                   4,  5, NA), 3)
+  p[3,] <- N - p[1,] - p[2,]
+  above <- c(-1, 1, 1, 1, 1, -1, 1, 1, 1)
+  for(i in 1:length(X)){
+    hold <- seq(0, 2 * pi, length.out = 99)
+    x    <- X[i] + (R[i] + 0.02) * cos(hold)
+    y    <- Y[i] + (R[i] + 0.02) * sin(hold)
+    polygon(x, y)
+    if(i %in% c(3, 4, 8)){
+      polygon(x, y, lty = 2, lwd = 3)
+    }
+    x    <- rep(NA, N[i])
+    y    <- rep(NA, N[i])
+    for(j in 1:N[i]){
+      inside <- FALSE
+      while(!inside){
+        xx <- runif(1, -R[i], R[i])
+        yy <- runif(1, -R[i], R[i])
+        if(sqrt(xx^2 + yy^2) < R[i]){
+          inside <- TRUE
+          x[j]   <- xx
+          y[j]   <- yy
+        }
+      }
+    }
+    type <- sample(1, N[i], TRUE)
+    x    <- X[i]+x
+    y    <- Y[i]+y
+    points(x, y)
+    these  <- sample(N[i], N[i])
+    if(i %in% c(3, 4, 8)){
+      points(x[these], y[these], pch = 20, cex = 0.8,)
+      points(x[these], y[these], cex = 1.4)
+      #points(x[these], y[these], pch = 19)
+    }
+  }
+  text(X, Y + above * (R + 0.01),
+       paste("Cluster", 1:length(X)),
+       pos = 2 + above,
+       cex = 1.3)
+}
+
+par_og <- par(no.readonly = TRUE)     # save original par
+par(mar = rep(0.5,4), mfrow = c(1,1)) # no margin, 2 figures 
+build_cluster()                       # build figure
+par(par_og)                           # restore original par
+```
 
 How large does a survey sample need to be? In general, this depends on two factors. One is the level of confidence in the result that the researcher wants. The larger the sample, the closer any statistic based on that sample will tend to be to the corresponding value in the population. The other factor is the budget of the study. Larger samples provide greater confidence, but they take more time, effort, and money to obtain. Taking these two factors into account, most survey research uses sample sizes that range from about 100 to about 1,000.
 
